[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "=2.2"
tensorflow = "=2.16.1"
tfcausalimpact = "=0.0.15"
pyarrow = "=16.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
